--- a/views/partials/profileSCard.hbs
+++ b/views/partials/profileSCard.hbs
@@ -3,7 +3,7 @@
     <div class="card-top">
       <div class="avatar-img" style="background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)), url('{{this.avatarUrl}}') no-repeat center; background-size: cover;">
         <div class="align-end">
-          <h3 class="fullname">{{this.fullname}}</h3>
+          <h2>{{this.fullname}}</h2>
           <p class="city">{{this.city}}</p>
         </div>
       </div>
