--- a/views/profile/reservations.hbs
+++ b/views/profile/reservations.hbs
@@ -1,24 +1,28 @@
 <div class="container reservations">
   <h1 class="title-book mt-5">Your bookings</h1>
   
-  <section>
-    <h1>Test</h1>
-        {{#each pending2}}
-      <div class="booking-card">
-        {{> reservationCard }}
-      </div>
-      {{/each}}
+  <section class="requested">
+    <h2 class="book-sections-title">Your requested bookings</h2>
 
-      <div>
-  </section>
-
-  <section class="pending">
-    <h2 class="book-sections-title">Requests to book you</h2>
     {{#unless pending}}
-      <p>You have no pending Requests</p>
+      <p>You have no requested bookings yet!</p>
     {{/unless}}
 
     {{#each pending}}
+      <div class="booking-card">
+        {{> reservationCard }}
+      </div>
+
+
+    {{/each}}
+  </section>
+  <section class="pending">
+    <h2 class="book-sections-title">Requests to book you</h2>
+    {{#unless pending2}}
+      <p>You have no pending requests to book you!</p>
+    {{/unless}}
+
+    {{#each pending2}}
       <div class="booking-card">
         {{> reservationCard }}
       </div>
@@ -37,7 +41,7 @@
     <h2 class="book-sections-title">Accepted bookings</h2>
 
     {{#unless accepted}}
-      <p>You have no accepted reservations</p>
+      <p>You have not any accepted booking yet!</p>
     {{/unless}}
 
     {{#each accepted}}
