--- a/views/profile/reservations.hbs
+++ b/views/profile/reservations.hbs
@@ -8,7 +8,7 @@
       <p>You have no requested bookings yet!</p>
     {{/unless}}
 
-    {{#each pending}}
+    {{#each pendingw}}
       <div class="booking-card">
         {{> reservationCard }}
       </div>
