--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -16,11 +16,12 @@
             <input type="text" name="username" placeholder="Username" class="form-control input-lg" required>
             <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Password" required>          
             <input type="email" name="email" placeholder="Email" class="form-control input-lg" required>
+            <input type="hidden" id="userPosition" name="userPosition" value="{{userPosition}}">
           </div>
        
           <div class="form-group">
             <h2 class="text-center">Everything ready?</h2>
-            <button type="submit" name="go" class="btn btn-lg btn-primary btn-block">Sign up</button>
+            <button type="submit" name="go" id="signup-button" class="btn btn-lg btn-primary btn-block">Sign up</button>
           </div>
            <footer class="text-center">
               <p>Already have an account? <a href="/login">Log in</a></p>
@@ -39,3 +40,4 @@
     </div>
   </div>    
 </div>
+
