--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -16,7 +16,9 @@
             <input type="text" name="username" placeholder="Username" class="form-control input-lg" required>
             <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Password" required>          
             <input type="email" name="email" placeholder="Email" class="form-control input-lg" required>
-            <input type="hidden" id="userPosition" name="userPosition" value="{{userPosition}}">
+            <input type="hidden" id="userPositionLat" name="userPositionLat" value="">
+            <input type="hidden" id="userPositionLon" name="userPositionLon" value="">
+
           </div>
        
           <div class="form-group">
