Add: Maps working - THOR MADRILEÑOOO

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous"> 
     <link rel="stylesheet" href="/stylesheets/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="/stylesheets/swiper/swiper.min.css">
-    <link rel="stylesheet" href="/stylesheets/animate.css">
+    <link href='https://api.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
