--- a/views/partials/scripts.hbs
+++ b/views/partials/scripts.hbs
@@ -1,2 +1,3 @@
+<script src='https://api.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.js'></script>
 <script src="/javascripts/swiper/swiper.min.js"></script>
 <script src="/javascripts/main.js"></script>
