--- a/views/buddies/profile.hbs
+++ b/views/buddies/profile.hbs
@@ -1,3 +1,7 @@
+
+<div id='map' style='width: auto; height: 300px;'></div>
+
+
 <section class="header">
   <h3 id="username" class="align-middle pt-3">@{{this.username}}</h3>
   <div style="background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)), url('{{this.avatarUrl}}') no-repeat center; background-size: cover;" class="user-pic container">
@@ -79,3 +83,19 @@
     </div>
   </div>
 
+  <input type="hidden" id='center' value='{{this.location.coordinates}}'>
+  
+
+
+<script src='https://api.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.js'></script>
+<script>
+
+const coordinatesArray = document.getElementById('center').value.split(',');
+ mapboxgl.accessToken = 'pk.eyJ1IjoiaGNvcnRhIiwiYSI6ImNqa2N5ZGdsbjBicHUzcG8wNXEycG4xa3EifQ.L806Ib3WtffrlfOnIf-dcA';
+  let map = new mapboxgl.Map({
+    container: 'map',
+    style: 'mapbox://styles/mapbox/streets-v9',
+    zoom: 12,
+    center: coordinatesArray
+  });
+</script>
