--- a/views/search/userlist.hbs
+++ b/views/search/userlist.hbs
@@ -1,3 +1,6 @@
+<div id='map' style='width: auto; height: 300px;'></div>
+
+
 <div class="search-page">
   <header class="top-section">
     <div class="container">
@@ -45,3 +48,19 @@
     </section>
   {{/if}}
 </div>
+
+<input type="text" id='center' value='{{user.location.coordinates}}'>
+
+
+<script src='https://api.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.js'></script>
+<script>
+
+const coordinatesArray = document.getElementById('center').value.split(',');
+ mapboxgl.accessToken = 'pk.eyJ1IjoiaGNvcnRhIiwiYSI6ImNqa2N5ZGdsbjBicHUzcG8wNXEycG4xa3EifQ.L806Ib3WtffrlfOnIf-dcA';
+  let map = new mapboxgl.Map({
+    container: 'map',
+    style: 'mapbox://styles/mapbox/streets-v9',
+    zoom: 12,
+    center: coordinatesArray
+  });
+</script>
