--- a/views/index.hbs
+++ b/views/index.hbs
@@ -47,16 +47,23 @@
       <div class="row">
         <div class="col-md-4">
           <div class="icon">
-            <i class="fas fa-archway"></i>
+            <i class="fas fa-globe"></i>
           </div>
           <h2>Travel</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
         </div>
         <div class="col-md-4">
           <div class="icon">
-            <i class="fas fa-hands-helping"></i>
+            <i class="fab fa-connectdevelop"></i>
           </div>
-          <h2>Meet people</h2>
+          <h2>Connect</h2>
+          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+        </div>
+        <div class="col-md-4">
+          <div class="icon">
+            <i class="fas fa-binoculars"></i>
+          </div>
+          <h2>Discover</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
         </div>
       </div>
