--- a/public/sass/views/_userprofile.scss
+++ b/public/sass/views/_userprofile.scss
@@ -45,10 +45,10 @@
 }
 
 .book-section{
-  padding: 5% 5% 0 5%;
-  background-color: #e3e3e3;
-  border: 1px grey solid;
-  margin: 10% 0;
+  padding: 5% 5% 5% 5%;
+  background-color: #f1f1f1;
+  // border: 1px grey solid;
+  margin: 10% 0 0 0;
 }
 
 input.date-input {
