--- a/views/buddies/profile.hbs
+++ b/views/buddies/profile.hbs
@@ -1,7 +1,3 @@
-
-<div id='map' style='width: auto; height: 300px;'></div>
-
-
 <section class="header">
   <h3 id="username" class="align-middle pt-3">@{{this.username}}</h3>
   <div style="background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,0), rgba(0,0,0,1)), url('{{this.avatarUrl}}') no-repeat center; background-size: cover;" class="user-pic container">
@@ -54,6 +50,8 @@
       <div class="col-md-7">
         <h2 class="mt-2">About me</h2>
         <p>{{this.biography}}</p>
+        <h2 class="mt-2">My location</h2>
+        <div id='map' style='width: auto; height: 200px;'></div>
       </div>
       <div class="col-md-4 ml-auto">
         <section class="book-section">
@@ -81,6 +79,7 @@
         {{/if}}
       </div>
     </div>
+
   </div>
 
   <input type="hidden" id='center' value='{{this.location.coordinates}}'>
@@ -94,8 +93,14 @@ const coordinatesArray = document.getElementById('center').value.split(',');
  mapboxgl.accessToken = 'pk.eyJ1IjoiaGNvcnRhIiwiYSI6ImNqa2N5ZGdsbjBicHUzcG8wNXEycG4xa3EifQ.L806Ib3WtffrlfOnIf-dcA';
   let map = new mapboxgl.Map({
     container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v9',
+    style: 'mapbox://styles/mapbox/light-v9',
     zoom: 12,
     center: coordinatesArray
+    
   });
+
+  var marker = new mapboxgl.Marker()
+  .setLngLat(coordinatesArray)
+  .addTo(map);
+
 </script>
