add: middleware to check valid id

--- a/views/404.hbs
+++ b/views/404.hbs
@@ -1,9 +1,10 @@
 <section class="page-404">
-  <div class="d-flex flex-column justify-content-center vh-80">
-    <div class="col-md-6 mx-auto content-box">
-      <h2>Opps, the page you are looking for doesn't exist</h2>
-      <a href="/" class="btn btn-primary pt-2 pb-2 mt-3">Back to home</a>
+  <div class="container">
+    <div class="d-flex flex-column justify-content-center vh-80">
+      <div class="col-md-6 mx-auto content-box">
+        <h2>Opps, the page you are looking for doesn't exist</h2>
+        <a href="/" class="btn btn-primary pt-2 pb-2 mt-3">Back to home</a>
+      </div>
     </div>
   </div>
-  
 </section>
