--- a/views/search/userlist.hbs
+++ b/views/search/userlist.hbs
@@ -49,18 +49,37 @@
   {{/if}}
 </div>
 
-<input type="text" id='center' value='{{user.location.coordinates}}'>
-
+<input type="hidden" id='city' value="{{city}}">
 
 <script src='https://api.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.js'></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 <script>
 
-const coordinatesArray = document.getElementById('center').value.split(',');
- mapboxgl.accessToken = 'pk.eyJ1IjoiaGNvcnRhIiwiYSI6ImNqa2N5ZGdsbjBicHUzcG8wNXEycG4xa3EifQ.L806Ib3WtffrlfOnIf-dcA';
-  let map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v9',
-    zoom: 12,
-    center: coordinatesArray
-  });
+  let city = document.getElementById('city').value;
+  axios({
+      method: 'get',
+      url: `http://localhost:3000/api/search?city=${city}`
+    })
+    .then(data => {
+      console.log(data);
+        data.data.forEach((location) => {
+        generateMarker(location);
+      })
+     // data.data.forEach((restaurante) => {
+       // generateMarker(restaurante);
+      //})
+    })
+    .catch(error => {
+      console.error(error);
+    })
+
+
+mapboxgl.accessToken = 'pk.eyJ1IjoiaGNvcnRhIiwiYSI6ImNqa2N5ZGdsbjBicHUzcG8wNXEycG4xa3EifQ.L806Ib3WtffrlfOnIf-dcA';
+let map = new mapboxgl.Map({
+  container: 'map',
+  style: 'mapbox://styles/mapbox/light-v9',
+  zoom: 10,
+  center: coordinatesArray
+});
 </script>
