add logo to navbar

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -2,7 +2,9 @@
 <div class="container-fluid">
   <div class="row">
     <div class="brand col-3 col-sm-2">
-      <a class="navbar-brand" id="site-logo" href="/"><strong>LB</strong></a>
+      <a class="navbar-brand" id="site-logo" href="/">
+        <img class="img-fluid" src="/images/logo-med.png" alt="" srcset="">
+      </a>
     </div>
     <div class="col-9 col-sm-8">
       <form class="searchform" action="/search">
