--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -4,12 +4,14 @@
     <div class="row vh-90 align-items-center top-section">
       
       <div class="col-md-6 col-lg-5 mx-auto">
-        <h2 class="mb-4">Log in to your account</h2>
+        <div class="form-top">
+        <div class="d-flex flex-column">
+          <h2>Log in to your account</h2>
+        </div>
+      </div>
         <section class="login-form text-center">
           <form method="post" action="/login" role="login" class="user-form">
             
-            <img src="http://via.placeholder.com/150x90" class="img-fluid mb-5 mx-auto d-block" alt="Logo">
-
             <input type="text" name="username" placeholder="Username" required class="form-control input-lg">
             <input type="password" name="password" class="form-control input-lg" id="password" placeholder="Password" required>          
             
