--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,7 +1,14 @@
 <footer class="site-footer">
   <div class="container">
+    <div class="row mb-3">
+       <div class="col-6">
+         <a class="navbar-brand" id="site-logo" href="/">
+        <img class="img-fluid" src="/images/logo-med.png" alt="Logo">
+      </a>
+      </div>
+    </div>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-6">
         <nav class="footer-nav">
           <ul>
             <li>About us</li>
@@ -10,7 +17,7 @@
           </ul>
         </nav>
       </div>
-       <div class="col-md-6">
+      <div class="col-6">
         <nav class="footer-nav">
           <ul>
             {{#if currentUser }}
