--- a/public/sass/components/_navbar.scss
+++ b/public/sass/components/_navbar.scss
@@ -3,6 +3,15 @@
   .row{
     width: 100%;
   }
+  .container-fluid{
+    padding: 0 5px 0 10px;
+  }
+  .brand{
+    padding: 0;
+  }
+  .s-form{
+    padding: 0;
+  }
 }
 .navbar-toggle-button {
   z-index: 9999;
@@ -75,11 +84,11 @@
     display: inline-block;
     padding-bottom: 5px;
   }
-width: 100%;
-margin-top: 50px;
-list-style:none;
-padding-left: 0;
-color: #000;
+  width: 100%;
+  margin-top: 50px;
+  list-style:none;
+  padding-left: 0;
+  color: #000;
   li{
     margin-top: 10px;
     a{
