--- a/public/sass/modules/_main-structure.scss
+++ b/public/sass/modules/_main-structure.scss
@@ -69,6 +69,9 @@ a{
       color: #fff;
     }
 }
+.home-wrapper + .site-footer{
+  margin-top: 0;
+}
 
 @media (min-width: 768px) {
   .login-section{
