--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,6 +61,9 @@ a {
   .site-footer a {
     color: #fff; }
 
+.home-wrapper + .site-footer {
+  margin-top: 0; }
+
 @media (min-width: 768px) {
   .login-section {
     overflow: hidden; } }
@@ -80,8 +83,10 @@ a {
   border-radius: 0; }
 
 .form-top {
-  background: #e4e4e4;
-  padding: 1rem; }
+  background: #000;
+  padding: 2rem;
+  color: #fff;
+  text-align: center; }
 
 .user-form {
   padding: 1rem;
@@ -113,11 +118,10 @@ a {
     width: 100%;
     font-size: .8rem;
     font-weight: 200;
-    position: relative;
-    height: 41px; }
+    position: relative; }
   .searchform:before {
     position: absolute;
-    right: 0px;
+    right: -5px;
     width: 50px;
     height: 100%;
     z-index: 2;
@@ -125,7 +129,7 @@ a {
     font-family: "Font Awesome 5 Free";
     font-weight: 600;
     content: "\f002";
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     color: #e4e4e4; }
 
 /*Errormessage*/
@@ -191,6 +195,12 @@ a {
   background: #000; }
   .navbar .row {
     width: 100%; }
+  .navbar .container-fluid {
+    padding: 0 5px 0 10px; }
+  .navbar .brand {
+    padding: 0; }
+  .navbar .s-form {
+    padding: 0; }
 
 .navbar-toggle-button {
   z-index: 9999;
