--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,10 +1,9 @@
 <div class="container">
-  <div class="row vh-100 align-items-center">
+  <div class="row vh-90 align-items-center top-section">
     
     <div class="col-md-7 col-lg-5 mx-auto">
       <div class="form-top">
         <div class="d-flex flex-column">
-          <img src="http://via.placeholder.com/75x45" class="img-fluid align-self-end" alt="Logo" />
           <h2>Sign up</h2>
         </div>
       </div>
