--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,12 +1,12 @@
 <nav class="navbar fixed-top">
 <div class="container-fluid">
-  <div class="row">
-    <div class="brand col-3 col-sm-2">
+  <div class="row align-items-center">
+    <div class="brand col-4 col-sm-3">
       <a class="navbar-brand" id="site-logo" href="/">
-        <img class="img-fluid" src="/images/logo-med.png" alt="" srcset="">
+        <img class="img-fluid" src="/images/logo-med.png" alt="Logo">
       </a>
     </div>
-    <div class="col-9 col-sm-8">
+    <div class="col-7 col-sm-7 s-form">
       <form class="searchform" action="/search">
         <input type="text" class="form-control" placeholder="Search by city" name="city" aria-label="City" id="search">
       </form>
