--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -1,21 +1,24 @@
 <div class="container">
   
-  <div class="row vh-100 align-items-center">
+  <div class="row vh-90 align-items-center top-section">
     
     <div class="col-md-5 mx-auto">
+      <div class="form-top">
+        <div class="d-flex flex-column">
+          <h2>Edit your profile</h2>
+        </div>
+      </div>
       <section class="user-form">
         <form method="post" action="/profile/edit" role="register">
-          
-          <img src="http://via.placeholder.com/150x90" class="img-fluid mb-5" alt="Logo" />
           <div class="form-group">
             <h2>Basic information</h2>
             <input type="text" name="username" placeholder="Username"  class="form-control input-lg"  value="{{this.username}}">
             <input type="password" class="form-control input-lg" id="password" placeholder="Password" >          
             <input type="email" name="email" placeholder="Email"  class="form-control input-lg" value="{{this.email}}" >
           </div>
-          <div class="form-group">
+          {{!-- <div class="form-group">
             <input type="file" name="avatarUrl" class="form-control" placeholder="Upload your profile pic" aria-label="Upload profile pic">
-          </div>
+          </div> --}}
           <div class="form-group">
             <h2>About me</h2>
             <input type="text" name="fullname" placeholder="Full name"  class="form-control input-lg"  value="{{this.fullname}}">
