--- a/views/profile/edit.hbs
+++ b/views/profile/edit.hbs
@@ -25,7 +25,7 @@
             <input type="text" name="city" placeholder="City" class="form-control input-lg" value="{{this.city}}">
             <input type="text" name="age"  placeholder="Age" class="form-control input-lg" value="{{this.age}}">          
             <select class="form-control mr-sm-2" id="categories" name="category"  value="{{this.category}}">
-              <option selected>Category</option>
+              <option selected>Choose your favourite category</option>
               <option value="Music">Music</option>
               <option value="Sports">Sports</option>
               <option value="Party">Party</option>
@@ -38,12 +38,12 @@
             <input type="text" name="highlights" placeholder="Resume your interests in 60 chars" maxlength="60" class="form-control input-lg"  value="{{this.highlights}}">
             <textarea class="form-control" placeholder="Add a small bio, max 200 chars" name="biography" rows="5"  value="">{{this.biography}}</textarea>
             <select class="form-control mr-sm-2" id="typeBeds" name="typeBeds"  value="{{this.typeBeds}}">
-              <option selected>Select your type of bed</option>
+              <option selected>What kind of bed can you offer?</option>
               <option value="Couch">Couch</option>
               <option value="Single Bed">Single Bed</option>
               <option value="Double Bed">Double Bed</option>
             </select>
-            <input type="number" name="bedsNumber" laceholder="Number of beds" class="form-control input-lg" value="{{this.bedsNumber}}">          
+            <input type="number" name="bedsNumber" placeholder="How many beds can you offer?" class="form-control input-lg" value="{{this.bedsNumber}}">          
             <input type="text" name="transport" placeholder="Type if you have a car or other transport" class="form-control input-lg" value="{{this.transport}}">          
           </div>
           <div class="form-group">
