--- a/public/sass/components/_navbar.scss
+++ b/public/sass/components/_navbar.scss
@@ -23,9 +23,9 @@
   cursor: pointer;
   transition: opacity .25s ease;
   span{
-    background: #fff;
+    background: #000;
     border: none;
-    height: 2px;
+    height: 3px;
     width: 100%;
     position: absolute;
     top: 0;
@@ -33,13 +33,16 @@
     transition: all .35s ease;
     cursor: pointer;
     &:nth-of-type(2) {
-      top: 6px;
+      top: 7px;
     }
     &:nth-of-type(3) {
-      top: 12px; 
+      top: 14px; 
     }
   }
   &.open{
+    span {
+      background: #000;
+    }
     span.top{
       transform: translateY(6px) translateX(0) rotate(45deg);
     }
@@ -48,9 +51,6 @@
     }
     span.bottom {
       transform: translateY(-6px) translateX(0) rotate(-45deg);
-    }
-    span {
-      background: #fff;
     }
   }
 }
@@ -67,7 +67,7 @@
   visibility: hidden;
   transition: opacity .35s,visibility .35s,height .35s,width .35s;
   overflow: hidden;
-  z-index: 100; 
+  z-index: 2; 
   color: #fff;
   &.open{
     opacity: 1;
