--- a/views/buddies/profile.hbs
+++ b/views/buddies/profile.hbs
@@ -55,7 +55,7 @@
       </div>
       <div class="col-md-4 ml-auto">
         <section class="book-section">
-          <h2>Book this Buddy</h2>
+          <h2>Visit this Buddy</h2>
           <form action="/buddies/{{this.id}}/book">
             <div class="form-group row">
               <div class="col-6">
@@ -69,7 +69,7 @@
             </div>
             <div class="form-group row">
               <div class="col">
-                <button type="submit" id="book-buddy" class="btn btn-lg btn-primary btn-block">Book</button>
+                <button type="submit" id="book-buddy" class="btn btn-lg btn-primary btn-block">Visit</button>
               </div>
             </div>
           </form>
